# claude-to-chatgpt

./: .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  README_JA.md  cloudflare-worker.js  docker-compose.yaml  pyproject.toml  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: docker-image.yml  docker.yaml
claude_to_chatgpt/: adapter.py  app.py  logger.py  models.py  util.py
claude_to_openai/: adapter.py  app.py  logger.py
